Updated /api/application
